dhall/tests/type-inference/failure/unit/WithInfersKind.txt
Type error: error: InvalidOptionalType
 --> <current file>:1:1
  |
1 | Some ({=} with x = Bool)
  | ^^^^^^^^^^^^^^^^^^^^^^^^ InvalidOptionalType
  |
